fix(mno): margin on mobile

--- a/app/blocks/mno/mno.styl
+++ b/app/blocks/mno/mno.styl
@@ -10,6 +10,8 @@
 
 		&:last-child
 			margin-right 0
+			+below('m')
+				margin-right 5px
 
 		&-image-wrapper
 			height 110px
